--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
   <head>
-    <title>Banana</title>
+    <title>Piitmo Banana</title>
     <style>/* add your css style rules here */
     body {
       color:#000;
